--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,7 +1,8 @@
-.panel-first {
+.parent-container {
+    /* background-color: red; */
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    cursor: pointer;
+    display: grid;
+    place-content: center;
+    height: 85%;
+    width: 100%;
 }
