--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,body {
+  max-width: 100%; 
+  overflow-x: hidden;
+  animation: hide-scroll 3s;
+}
+
+@keyframes hide-scroll {
+  from,
+  to {
+    overflow: hidden;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
